tests/expectations/compiler/array/array_of_records_fail.out
Error [ETYC0372079]: An array cannot have a record as an element type
    --> compiler-test:8:9
     |
   8 |         data: [token; 2],
     |         ^^^^^^^^^^^^^^^^
Error [ETYC0372079]: An array cannot have a record as an element type
    --> compiler-test:13:9
     |
  13 |         let arr: [token; 2] = [t, t];
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
